syntax = "proto3";

option java_package = "com.truongdc.movie_tmdb.core.datastore";
option java_multiple_files = true;

message UserProto {
  string name = 1;
  string email = 2;
  string password = 3;
}
